--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@cerebras/cerebras_cloud_sdk": "^1.0.1",
+    "@deepgram/sdk": "^3.6.0",
+    "@ricky0123/vad": "^0.2.4",
+    "axios": "^1.7.7",
+    "next": "14.2.7",
+    "onnxruntime-node": "^1.19.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
+    "husky": "^9.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "typescript": "^5"
   }
 }
